// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemCheckbox Should display a CheckIcon when the input is checked 1`] = `
.c0 {
  margin: 0;
  font-weight: 400;
}

.c0.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-body,
.c0.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-display1 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
}

.c0.kirk-text-display2 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
}

.c0.kirk-text-subheader,
.c0.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-bodyStrong,
.c0.kirk-text-subheaderStrong,
.c0.kirk-text-titleStrong {
  font-weight: 500;
}

<label
  className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-checkbox custom-class-name"
>
  <div
    className="jsx-1542968643 kirk-item-leftText"
  >
    <div
      className="kirk-text kirk-text-title kirk-item-title c0"
    >
      Label title
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body c0"
    >
      Label
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightText"
  >
    <div
      className="kirk-text kirk-text-subheaderStrong kirk-item-title c0"
    >
      Data
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body c0"
    >
      Data info
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightAddon"
  >
    <input
      checked={true}
      disabled={false}
      name="name"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      className="kirk-icon kirk-icon-check"
      fill="#FFF"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        className="jsx-2416231148 jsx-3125355633"
        d="M6.5 12.5l4 4 8-8"
        fill="none"
        stroke="#FFF"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeMiterlimit="10"
        strokeWidth="1"
      />
    </svg>
  </div>
</label>
`;

exports[`ItemCheckbox Should display a Loader when the component is in loading status 1`] = `
.c0 {
  margin: 0;
  font-weight: 400;
}

.c0.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-body,
.c0.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-display1 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
}

.c0.kirk-text-display2 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
}

.c0.kirk-text-subheader,
.c0.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-bodyStrong,
.c0.kirk-text-subheaderStrong,
.c0.kirk-text-titleStrong {
  font-weight: 500;
}

<label
  className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-checkbox custom-class-name"
>
  <div
    className="jsx-1542968643 kirk-item-leftText"
  >
    <div
      className="kirk-text kirk-text-title kirk-item-title c0"
    >
      Label title
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body c0"
    >
      Label
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightText"
  >
    <div
      className="kirk-text kirk-text-subheaderStrong kirk-item-title c0"
    >
      Data
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body c0"
    >
      Data info
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightAddon"
  >
    <input
      checked={false}
      disabled={true}
      name="name"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="jsx-2765694959 kirk-loader"
      style={
        Object {
          "height": "24px",
          "width": "24px",
        }
      }
    >
      <svg
        aria-hidden={true}
        className="kirk-icon kirk-icon-circle spinning"
        fill="#5DD167"
        height={24}
        viewBox="0 0 66 66"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <circle
          className="jsx-2931153156"
          cx="33"
          cy="33"
          fill="none"
          r="30"
          stroke="#5DD167"
        />
      </svg>
    </div>
  </div>
</label>
`;

exports[`ItemCheckbox Should forward its props to the Item component 1`] = `
.c0 {
  margin: 0;
  font-weight: 400;
}

.c0.kirk-text-button {
  color: #054752;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-body,
.c0.kirk-text-bodyStrong {
  color: #708C91;
  font-size: 16px;
  line-height: 20px;
}

.c0.kirk-text-caption {
  color: #708C91;
  font-size: 13px;
  line-height: 16px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-display1 {
  color: #054752;
  font-size: 82px;
  line-height: 82px;
}

.c0.kirk-text-display2 {
  color: #054752;
  font-size: 30px;
  line-height: 1.06;
}

.c0.kirk-text-subheader,
.c0.kirk-text-subheaderStrong {
  color: #054752;
  font-size: 22px;
  line-height: 24px;
}

.c0.kirk-text-title,
.c0.kirk-text-titleStrong {
  color: #054752;
  font-size: 18px;
  line-height: 20px;
}

.c0.kirk-text-bodyStrong,
.c0.kirk-text-subheaderStrong,
.c0.kirk-text-titleStrong {
  font-weight: 500;
}

<label
  className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-checkbox custom-class-name"
>
  <div
    className="jsx-1542968643 kirk-item-leftText"
  >
    <div
      className="kirk-text kirk-text-title kirk-item-title c0"
    >
      Label title
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body c0"
    >
      Label
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightText"
  >
    <div
      className="kirk-text kirk-text-subheaderStrong kirk-item-title c0"
    >
      Data
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body c0"
    >
      Data info
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightAddon"
  >
    <input
      checked={false}
      disabled={false}
      name="name"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      className="kirk-icon kirk-icon-circle"
      fill="#00AFF5"
      height={24}
      viewBox="0 0 66 66"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <circle
        className="jsx-2931153156"
        cx="33"
        cy="33"
        fill="none"
        r="30"
        stroke="#00AFF5"
      />
    </svg>
  </div>
</label>
`;
